--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,19 +5,19 @@
 
 version: 2
 updates:
-  - package-ecosystem: “nuget”
+  - package-ecosystem: "nuget"
     directory: /src/Movye.Api
     schedule:
       interval: daily
-  - package-ecosystem: “nuget”
+  - package-ecosystem: "nuget"
     directory: /src/Movye.Identity
     schedule:
       interval: daily
-  - package-ecosystem: “nuget”
+  - package-ecosystem: "nuget"
     directory: /src/Movye.Data
     schedule:
       interval: daily
-  - package-ecosystem: “nuget”
+  - package-ecosystem: "nuget"
     directory: /src/Movye.Domain
     schedule:
       interval: daily
