--- a/src/Movye.Data/Movye.Data.csproj
+++ b/src/Movye.Data/Movye.Data.csproj
@@ -6,4 +6,14 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="DotNetEnv" Version="2.5.0" />
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="7.0.4" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="../Movye.Domain/Movye.Domain.csproj" />
+  </ItemGroup>
+
+
 </Project>
