feat: created application layer

--- a/src/Movye.Api/Movye.Api.csproj
+++ b/src/Movye.Api/Movye.Api.csproj
@@ -25,6 +25,7 @@
   <ItemGroup>
     <ProjectReference Include="../Movye.Data/Movye.Data.csproj" />
     <ProjectReference Include="../Movye.Identity/Movye.Identity.csproj" />
+    <ProjectReference Include="../Movye.Application/Movye.Application.csproj" />
   </ItemGroup>
 
 
