--- a/src/Movye.Api/.env.template
+++ b/src/Movye.Api/.env.template
@@ -4,3 +4,8 @@ JWT_ISSUER=
 JWT_AUDIENCE=
 JWT_EXPIRATION=
 JWT_REFRESH_EXPIRATION=
+SMTP_HOST=
+SMTP_PORT=
+SMTP_SENDER_EMAIL=
+SMTP_SENDER_PASSWORD=
+THEMOVIEDB_API_KEY=
